# ingscale

./: Ingscale.cabal  Ingscale.hs  README.md  example.txt  ingscale.cabal  ingscale.hs  stack.yaml
src/: Main.hs
src/lib/: Ingscale.hs
src/lib/Ingscale/: Parser.hs  Printer.hs  Quantity.hs  Types.hs  Units.hs  Util.hs
tests/: Main.hs
