name:                Ingscale
version:             0.0.2.0
synopsis:            Library for scaling of ingredients lists
description:         Please see README.md
homepage:            http://github.com/mtesseract/Ingscale#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Schulte
category:            value
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:        -Wall
  Build-Depends:	MissingH
                      , base >= 4.7 && < 5
                      , containers >= 0.5.6.2
                      , formatting >= 6.2.2
                      , lens >= 4.13 && < 5
                      , split
                      , text
                      , utf8-string
  Exposed-modules:      Ingscale
  default-language:    Haskell2010


executable ingscale
  main-is:           ingscale.hs
  build-depends:	MissingH
                      , base >= 4.7 && < 5
                      , lens >= 4.13 && < 5
                      , containers >= 0.5.6.2
                      , formatting >= 6.2.2
                      , optparse-applicative
                      , split
                      , text
                      , utf8-string
  other-modules:        Ingscale
  ghc-options:       -Wall
  default-language:  Haskell2010
