name:                ingscale
version:             0.0.2.0
synopsis:            Library for scaling of ingredients lists
description:         Please see README.md
homepage:            http://github.com/mtesseract/Ingscale#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Schulte
category:            value
build-type:          Simple
cabal-version:       >=1.10

Library
  hs-source-dirs:    src/lib
  default-language:    Haskell2010
  ghc-options:        -Wall
  build-depends:	base >= 4.7 && < 5
                      , containers >= 0.5.6.2
                      , formatting >= 6.2.2
                      , lens >= 4.13 && < 5
                      , split
                      , text
                      , utf8-string
                      , quantities
  Exposed-modules:      Ingscale

executable ingscale
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:	base >= 4.7 && < 5
                      , optparse-applicative
                      , ingscale
                      , quantities
                      , text
  ghc-options:       -Wall
  default-language:  Haskell2010
  other-modules:     Paths_Ingscale

Test-Suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/
  main-is:             Main.hs
  build-depends:       HUnit
                     , Ingscale
                     , QuickCheck >= 2.8.1
                     , base >= 4.7 && < 5
                     , test-framework >= 0.8.1.1
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
  ghc-options:         -Wall
  cpp-options:  -DTEST
